--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link
+      rel="shortcut icon"
+      href="%PUBLIC_URL%/logo-favicon.svg"
+      type="image/svg+xml"
+    />
+
     <title>Mini Blog</title>
   </head>
   <body>
